Trabalho 001/expr.output
Gramática

    0 $accept: Programa $end

    1 Programa: ListaFuncoes BlocoPrincipal T_FIM
    2         | BlocoPrincipal T_FIM

    3 ListaFuncoes: ListaFuncoes Funcao
    4             | Funcao

    5 Funcao: TipoRetorno T_ID T_ABRE_PARENTESES DeclParametros T_FECHA_PARENTESES BlocoPrincipal
    6       | TipoRetorno T_ID T_ABRE_PARENTESES T_FECHA_PARENTESES BlocoPrincipal

    7 TipoRetorno: T_VOID
    8            | T_INT
    9            | T_STRING

   10 DeclParametros: DeclParametros T_VIRGULA Parametro
   11               | Parametro

   12 Parametro: Tipo T_ID

   13 BlocoPrincipal: T_ABRE_CHAVES Declaracoes ListaCmd T_FECHA_CHAVES
   14               | T_ABRE_CHAVES ListaCmd T_FECHA_CHAVES

   15 Declaracoes: Declaracoes Declaracao
   16            | Declaracao

   17 Declaracao: Tipo ListaId T_PONTO_E_VIRGULA

   18 Tipo: T_INT
   19     | T_STRING

   20 ListaId: ListaId T_VIRGULA T_ID
   21        | T_ID

   22 Bloco: T_ABRE_CHAVES ListaCmd T_FECHA_CHAVES

   23 ListaCmd: ListaCmd Comando
   24         | Comando

   25 Comando: CmdSe
   26        | CmdEnquanto
   27        | CmdAtrib
   28        | CmdEscrita
   29        | CmdLeitura
   30        | ChamadaProc
   31        | Retorno

   32 Retorno: T_RETURN ExpressaoAritmetica T_PONTO_E_VIRGULA
   33        | T_RETURN T_LITERAL T_PONTO_E_VIRGULA

   34 CmdSe: T_IF T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES Bloco
   35      | T_IF T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES Bloco T_ELSE Bloco

   36 CmdEnquanto: T_WHILE T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES Bloco

   37 CmdAtrib: T_ID T_IGUAL ExpressaoAritmetica T_PONTO_E_VIRGULA
   38         | T_ID T_IGUAL T_LITERAL T_PONTO_E_VIRGULA

   39 CmdEscrita: T_PRINT T_ABRE_PARENTESES ExpressaoAritmetica T_FECHA_PARENTESES T_PONTO_E_VIRGULA
   40           | T_PRINT T_ABRE_PARENTESES T_LITERAL T_FECHA_PARENTESES T_PONTO_E_VIRGULA

   41 CmdLeitura: T_READ T_ABRE_PARENTESES T_ID T_FECHA_PARENTESES T_PONTO_E_VIRGULA

   42 ChamadaProc: ChamadaFuncao T_PONTO_E_VIRGULA

   43 ChamadaFuncao: T_ID T_ABRE_PARENTESES ListaParametros T_FECHA_PARENTESES
   44              | T_ID T_ABRE_PARENTESES T_FECHA_PARENTESES

   45 ListaParametros: ListaParametros T_VIRGULA ExpressaoAritmetica
   46                | ListaParametros T_VIRGULA T_LITERAL
   47                | ExpressaoAritmetica
   48                | T_LITERAL

   49 ExpressaoAritmetica: ExpressaoAritmetica T_ADICAO TExpressaoAritmetica
   50                    | ExpressaoAritmetica T_SUBTRACAO TExpressaoAritmetica
   51                    | TExpressaoAritmetica

   52 TExpressaoAritmetica: TExpressaoAritmetica T_MULTIPLICACAO FExpressaoAritmetica
   53                     | TExpressaoAritmetica T_DIVISAO FExpressaoAritmetica
   54                     | FExpressaoAritmetica

   55 FExpressaoAritmetica: T_ABRE_PARENTESES ExpressaoAritmetica T_FECHA_PARENTESES
   56                     | T_SUBTRACAO FExpressaoAritmetica
   57                     | T_NUM
   58                     | T_ID

   59 ExpressaoLogica: ExpressaoLogica T_AND FExpressaoLogica
   60                | ExpressaoLogica T_OR FExpressaoLogica
   61                | FExpressaoLogica

   62 FExpressaoLogica: T_NOT FExpressaoLogica
   63                 | T_ABRE_PARENTESES FExpressaoLogica T_FECHA_PARENTESES
   64                 | T_TRUE
   65                 | T_FALSE
   66                 | ExpressaoRelacional

   67 ExpressaoRelacional: ExpressaoAritmetica T_MAIOR ExpressaoAritmetica
   68                    | ExpressaoAritmetica T_MENOR ExpressaoAritmetica
   69                    | ExpressaoAritmetica T_MAIOR_IGUAL ExpressaoAritmetica
   70                    | ExpressaoAritmetica T_MENOR_IGUAL ExpressaoAritmetica
   71                    | ExpressaoAritmetica T_IGUAL_IGUAL ExpressaoAritmetica
   72                    | ExpressaoAritmetica T_DIFERENTE ExpressaoAritmetica


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
T_ADICAO (258) 49
T_SUBTRACAO (259) 50 56
T_MULTIPLICACAO (260) 52
T_DIVISAO (261) 53
T_IGUAL (262) 37 38
T_ABRE_PARENTESES (263) 5 6 34 35 36 39 40 41 43 44 55 63
T_FECHA_PARENTESES (264) 5 6 34 35 36 39 40 41 43 44 55 63
T_ABRE_CHAVES (265) 13 14 22
T_FECHA_CHAVES (266) 13 14 22
T_INT (267) 8 18
T_STRING (268) 9 19
T_VOID (269) 7
T_IF (270) 34 35
T_WHILE (271) 36
T_ELSE (272) 35
T_PRINT (273) 39 40
T_READ (274) 41
T_RETURN (275) 32 33
T_ID (276) 5 6 12 20 21 37 38 41 43 44 58
T_LITERAL (277) 33 38 40 46 48
T_FIM (278) 1 2
T_NUM (279) 57
T_VIRGULA (280) 10 20 45 46
T_PONTO_E_VIRGULA (281) 17 32 33 37 38 39 40 41 42
T_AND (282) 59
T_NOT (283) 62
T_OR (284) 60
T_TRUE (285) 64
T_FALSE (286) 65
T_MAIOR_IGUAL (287) 69
T_MENOR_IGUAL (288) 70
T_DIFERENTE (289) 72
T_IGUAL_IGUAL (290) 71
T_MAIOR (291) 67
T_MENOR (292) 68


Não terminais com as regras onde eles aparecem

$accept (38)
    à esquerda: 0
Programa (39)
    à esquerda: 1 2, à direita: 0
ListaFuncoes (40)
    à esquerda: 3 4, à direita: 1 3
Funcao (41)
    à esquerda: 5 6, à direita: 3 4
TipoRetorno (42)
    à esquerda: 7 8 9, à direita: 5 6
DeclParametros (43)
    à esquerda: 10 11, à direita: 5 10
Parametro (44)
    à esquerda: 12, à direita: 10 11
BlocoPrincipal (45)
    à esquerda: 13 14, à direita: 1 2 5 6
Declaracoes (46)
    à esquerda: 15 16, à direita: 13 15
Declaracao (47)
    à esquerda: 17, à direita: 15 16
Tipo (48)
    à esquerda: 18 19, à direita: 12 17
ListaId (49)
    à esquerda: 20 21, à direita: 17 20
Bloco (50)
    à esquerda: 22, à direita: 34 35 36
ListaCmd (51)
    à esquerda: 23 24, à direita: 13 14 22 23
Comando (52)
    à esquerda: 25 26 27 28 29 30 31, à direita: 23 24
Retorno (53)
    à esquerda: 32 33, à direita: 31
CmdSe (54)
    à esquerda: 34 35, à direita: 25
CmdEnquanto (55)
    à esquerda: 36, à direita: 26
CmdAtrib (56)
    à esquerda: 37 38, à direita: 27
CmdEscrita (57)
    à esquerda: 39 40, à direita: 28
CmdLeitura (58)
    à esquerda: 41, à direita: 29
ChamadaProc (59)
    à esquerda: 42, à direita: 30
ChamadaFuncao (60)
    à esquerda: 43 44, à direita: 42
ListaParametros (61)
    à esquerda: 45 46 47 48, à direita: 43 45 46
ExpressaoAritmetica (62)
    à esquerda: 49 50 51, à direita: 32 37 39 45 47 49 50 55 67 68
    69 70 71 72
TExpressaoAritmetica (63)
    à esquerda: 52 53 54, à direita: 49 50 51 52 53
FExpressaoAritmetica (64)
    à esquerda: 55 56 57 58, à direita: 52 53 54 56
ExpressaoLogica (65)
    à esquerda: 59 60 61, à direita: 34 35 36 59 60
FExpressaoLogica (66)
    à esquerda: 62 63 64 65 66, à direita: 59 60 61 62 63
ExpressaoRelacional (67)
    à esquerda: 67 68 69 70 71 72, à direita: 66


Estado 0

    0 $accept: . Programa $end

    T_ABRE_CHAVES  deslocar, e ir ao estado 1
    T_INT          deslocar, e ir ao estado 2
    T_STRING       deslocar, e ir ao estado 3
    T_VOID         deslocar, e ir ao estado 4

    Programa        ir ao estado 5
    ListaFuncoes    ir ao estado 6
    Funcao          ir ao estado 7
    TipoRetorno     ir ao estado 8
    BlocoPrincipal  ir ao estado 9


Estado 1

   13 BlocoPrincipal: T_ABRE_CHAVES . Declaracoes ListaCmd T_FECHA_CHAVES
   14               | T_ABRE_CHAVES . ListaCmd T_FECHA_CHAVES

    T_INT     deslocar, e ir ao estado 10
    T_STRING  deslocar, e ir ao estado 11
    T_IF      deslocar, e ir ao estado 12
    T_WHILE   deslocar, e ir ao estado 13
    T_PRINT   deslocar, e ir ao estado 14
    T_READ    deslocar, e ir ao estado 15
    T_RETURN  deslocar, e ir ao estado 16
    T_ID      deslocar, e ir ao estado 17

    Declaracoes    ir ao estado 18
    Declaracao     ir ao estado 19
    Tipo           ir ao estado 20
    ListaCmd       ir ao estado 21
    Comando        ir ao estado 22
    Retorno        ir ao estado 23
    CmdSe          ir ao estado 24
    CmdEnquanto    ir ao estado 25
    CmdAtrib       ir ao estado 26
    CmdEscrita     ir ao estado 27
    CmdLeitura     ir ao estado 28
    ChamadaProc    ir ao estado 29
    ChamadaFuncao  ir ao estado 30


Estado 2

    8 TipoRetorno: T_INT .

    $padrão  reduzir usando a regra 8 (TipoRetorno)


Estado 3

    9 TipoRetorno: T_STRING .

    $padrão  reduzir usando a regra 9 (TipoRetorno)


Estado 4

    7 TipoRetorno: T_VOID .

    $padrão  reduzir usando a regra 7 (TipoRetorno)


Estado 5

    0 $accept: Programa . $end

    $end  deslocar, e ir ao estado 31


Estado 6

    1 Programa: ListaFuncoes . BlocoPrincipal T_FIM
    3 ListaFuncoes: ListaFuncoes . Funcao

    T_ABRE_CHAVES  deslocar, e ir ao estado 1
    T_INT          deslocar, e ir ao estado 2
    T_STRING       deslocar, e ir ao estado 3
    T_VOID         deslocar, e ir ao estado 4

    Funcao          ir ao estado 32
    TipoRetorno     ir ao estado 8
    BlocoPrincipal  ir ao estado 33


Estado 7

    4 ListaFuncoes: Funcao .

    $padrão  reduzir usando a regra 4 (ListaFuncoes)


Estado 8

    5 Funcao: TipoRetorno . T_ID T_ABRE_PARENTESES DeclParametros T_FECHA_PARENTESES BlocoPrincipal
    6       | TipoRetorno . T_ID T_ABRE_PARENTESES T_FECHA_PARENTESES BlocoPrincipal

    T_ID  deslocar, e ir ao estado 34


Estado 9

    2 Programa: BlocoPrincipal . T_FIM

    T_FIM  deslocar, e ir ao estado 35


Estado 10

   18 Tipo: T_INT .

    $padrão  reduzir usando a regra 18 (Tipo)


Estado 11

   19 Tipo: T_STRING .

    $padrão  reduzir usando a regra 19 (Tipo)


Estado 12

   34 CmdSe: T_IF . T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES Bloco
   35      | T_IF . T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES Bloco T_ELSE Bloco

    T_ABRE_PARENTESES  deslocar, e ir ao estado 36


Estado 13

   36 CmdEnquanto: T_WHILE . T_ABRE_PARENTESES ExpressaoLogica T_FECHA_PARENTESES Bloco

    T_ABRE_PARENTESES  deslocar, e ir ao estado 37


Estado 14

   39 CmdEscrita: T_PRINT . T_ABRE_PARENTESES ExpressaoAritmetica T_FECHA_PARENTESES T_PONTO_E_VIRGULA
   40           | T_PRINT . T_ABRE_PARENTESES T_LITERAL T_FECHA_PARENTESES T_PONTO_E_VIRGULA

    T_ABRE_PARENTESES  deslocar, e ir ao estado 38


Estado 15

   41 CmdLeitura: T_READ . T_ABRE_PARENTESES T_ID T_FECHA_PARENTESES T_PONTO_E_VIRGULA

    T_ABRE_PARENTESES  deslocar, e ir ao estado 39


Estado 16

   32 Retorno: T_RETURN . ExpressaoAritmetica T_PONTO_E_VIRGULA
   33        | T_RETURN . T_LITERAL T_PONTO_E_VIRGULA

    T_SUBTRACAO        deslocar, e ir ao estado 40
    T_ABRE_PARENTESES  deslocar, e ir ao estado 41
    T_ID               deslocar, e ir ao estado 42
    T_LITERAL          deslocar, e ir ao estado 43
    T_NUM              deslocar, e ir ao estado 44

    ExpressaoAritmetica   ir ao estado 45
    TExpressaoAritmetica  ir ao estado 46
    FExpressaoAritmetica  ir ao estado 47


Estado 17

   37 CmdAtrib: T_ID . T_IGUAL ExpressaoAritmetica T_PONTO_E_VIRGULA
   38         | T_ID . T_IGUAL T_LITERAL T_PONTO_E_VIRGULA
   43 ChamadaFuncao: T_ID . T_ABRE_PARENTESES ListaParametros T_FECHA_PARENTESES
   44              | T_ID . T_ABRE_PARENTESES T_FECHA_PARENTESES

    T_IGUAL            deslocar, e ir ao estado 48
    T_ABRE_PARENTESES  deslocar, e ir ao estado 49


Estado 18

   13 BlocoPrincipal: T_ABRE_CHAVES Declaracoes . ListaCmd T_FECHA_CHAVES
   15 Declaracoes: Declaracoes . Declaracao

    T_INT     deslocar, e ir ao estado 10
    T_STRING  deslocar, e ir ao estado 11
    T_IF      deslocar, e ir ao estado 12
    T_WHILE   deslocar, e ir ao estado 13
    T_PRINT   deslocar, e ir ao estado 14
    T_READ    deslocar, e ir ao estado 15
    T_RETURN  deslocar, e ir ao estado 16
    T_ID      deslocar, e ir ao estado 17

    Declaracao     ir ao estado 50
    Tipo           ir ao estado 20
    ListaCmd       ir ao estado 51
    Comando        ir ao estado 22
    Retorno        ir ao estado 23
    CmdSe          ir ao estado 24
    CmdEnquanto    ir ao estado 25
    CmdAtrib       ir ao estado 26
    CmdEscrita     ir ao estado 27
    CmdLeitura     ir ao estado 28
    ChamadaProc    ir ao estado 29
    ChamadaFuncao  ir ao estado 30


Estado 19

   16 Declaracoes: Declaracao .

    $padrão  reduzir usando a regra 16 (Declaracoes)


Estado 20

   17 Declaracao: Tipo . ListaId T_PONTO_E_VIRGULA

    T_ID  deslocar, e ir ao estado 52

    ListaId  ir ao estado 53


Estado 21

   14 BlocoPrincipal: T_ABRE_CHAVES ListaCmd . T_FECHA_CHAVES
   23 ListaCmd: ListaCmd . Comando

    T_FECHA_CHAVES  deslocar, e ir ao estado 54
    T_IF            deslocar, e ir ao estado 12
    T_WHILE         deslocar, e ir ao estado 13
    T_PRINT         deslocar, e ir ao estado 14
    T_READ          deslocar, e ir ao estado 15
    T_RETURN        deslocar, e ir ao estado 16
    T_ID            deslocar, e ir ao estado 17

    Comando        ir ao estado 55
    Retorno        ir ao estado 23
    CmdSe          ir ao estado 24
    CmdEnquanto    ir ao estado 25
    CmdAtrib       ir ao estado 26
    CmdEscrita     ir ao estado 27
    CmdLeitura     ir ao estado 28
    ChamadaProc    ir ao estado 29
    ChamadaFuncao  ir ao estado 30


Estado 22

   24 ListaCmd: Comando .

    $padrão  reduzir usando a regra 24 (ListaCmd)


Estado 23

   31 Comando: Retorno .

    $padrão  reduzir usando a regra 31 (Comando)


Estado 24

   25 Comando: CmdSe .

    $padrão  reduzir usando a regra 25 (Comando)


Estado 25

   26 Comando: CmdEnquanto .

    $padrão  reduzir usando a regra 26 (Comando)


Estado 26

   27 Comando: CmdAtrib .

    $padrão  reduzir usando a regra 27 (Comando)


Estado 27

   28 Comando: CmdEscrita .

    $padrão  reduzir usando a regra 28 (Comando)


Estado 28

   29 Comando: CmdLeitura .

    $padrão  reduzir usando a regra 29 (Comando)


Estado 29

   30 Comando: ChamadaProc .

    $padrão  reduzir usando a regra 30 (Comando)


Estado 30

   42 ChamadaProc: ChamadaFuncao . T_PONTO_E_VIRGULA

    T_PONTO_E_VIRGULA  deslocar, e ir ao estado 56


Estado 31

    0 $accept: Programa $end .

    $padrão  aceitar


Estado 32

    3 ListaFuncoes: ListaFuncoes Funcao .

    $padrão  reduzir usando a regra 3 (ListaFuncoes)


Estado 33

    1 Programa: ListaFuncoes BlocoPrincipal . T_FIM

    T_FIM  deslocar, e ir ao estado 57


Estado 34

    5 Funcao: TipoRetorno T_ID . T_ABRE_PARENTESES DeclParametros T_FECHA_PARENTESES BlocoPrincipal
    6       | TipoRetorno T_ID . T_ABRE_PARENTESES T_FECHA_PARENTESES BlocoPrincipal

    T_ABRE_PARENTESES  deslocar, e ir ao estado 58


Estado 35

    2 Programa: BlocoPrincipal T_FIM .

    $padrão  reduzir usando a regra 2 (Programa)


Estado 36

   34 CmdSe: T_IF T_ABRE_PARENTESES . ExpressaoLogica T_FECHA_PARENTESES Bloco
   35      | T_IF T_ABRE_PARENTESES . ExpressaoLogica T_FECHA_PARENTESES Bloco T_ELSE Bloco

    T_SUBTRACAO        deslocar, e ir ao estado 40
    T_ABRE_PARENTESES  deslocar, e ir ao estado 59
    T_ID               deslocar, e ir ao estado 42
    T_NUM              deslocar, e ir ao estado 44
    T_NOT              deslocar, e ir ao estado 60
    T_TRUE             deslocar, e ir ao estado 61
    T_FALSE            deslocar, e ir ao estado 62

    ExpressaoAritmetica   ir ao estado 63
    TExpressaoAritmetica  ir ao estado 46
    FExpressaoAritmetica  ir ao estado 47
    ExpressaoLogica       ir ao estado 64
    FExpressaoLogica      ir ao estado 65
    ExpressaoRelacional   ir ao estado 66


Estado 37

   36 CmdEnquanto: T_WHILE T_ABRE_PARENTESES . ExpressaoLogica T_FECHA_PARENTESES Bloco

    T_SUBTRACAO        deslocar, e ir ao estado 40
    T_ABRE_PARENTESES  deslocar, e ir ao estado 59
    T_ID               deslocar, e ir ao estado 42
    T_NUM              deslocar, e ir ao estado 44
    T_NOT              deslocar, e ir ao estado 60
    T_TRUE             deslocar, e ir ao estado 61
    T_FALSE            deslocar, e ir ao estado 62

    ExpressaoAritmetica   ir ao estado 63
    TExpressaoAritmetica  ir ao estado 46
    FExpressaoAritmetica  ir ao estado 47
    ExpressaoLogica       ir ao estado 67
    FExpressaoLogica      ir ao estado 65
    ExpressaoRelacional   ir ao estado 66


Estado 38

   39 CmdEscrita: T_PRINT T_ABRE_PARENTESES . ExpressaoAritmetica T_FECHA_PARENTESES T_PONTO_E_VIRGULA
   40           | T_PRINT T_ABRE_PARENTESES . T_LITERAL T_FECHA_PARENTESES T_PONTO_E_VIRGULA

    T_SUBTRACAO        deslocar, e ir ao estado 40
    T_ABRE_PARENTESES  deslocar, e ir ao estado 41
    T_ID               deslocar, e ir ao estado 42
    T_LITERAL          deslocar, e ir ao estado 68
    T_NUM              deslocar, e ir ao estado 44

    ExpressaoAritmetica   ir ao estado 69
    TExpressaoAritmetica  ir ao estado 46
    FExpressaoAritmetica  ir ao estado 47


Estado 39

   41 CmdLeitura: T_READ T_ABRE_PARENTESES . T_ID T_FECHA_PARENTESES T_PONTO_E_VIRGULA

    T_ID  deslocar, e ir ao estado 70


Estado 40

   56 FExpressaoAritmetica: T_SUBTRACAO . FExpressaoAritmetica

    T_SUBTRACAO        deslocar, e ir ao estado 40
    T_ABRE_PARENTESES  deslocar, e ir ao estado 41
    T_ID               deslocar, e ir ao estado 42
    T_NUM              deslocar, e ir ao estado 44

    FExpressaoAritmetica  ir ao estado 71


Estado 41

   55 FExpressaoAritmetica: T_ABRE_PARENTESES . ExpressaoAritmetica T_FECHA_PARENTESES

    T_SUBTRACAO        deslocar, e ir ao estado 40
    T_ABRE_PARENTESES  deslocar, e ir ao estado 41
    T_ID               deslocar, e ir ao estado 42
    T_NUM              deslocar, e ir ao estado 44

    ExpressaoAritmetica   ir ao estado 72
    TExpressaoAritmetica  ir ao estado 46
    FExpressaoAritmetica  ir ao estado 47


Estado 42

   58 FExpressaoAritmetica: T_ID .

    $padrão  reduzir usando a regra 58 (FExpressaoAritmetica)


Estado 43

   33 Retorno: T_RETURN T_LITERAL . T_PONTO_E_VIRGULA

    T_PONTO_E_VIRGULA  deslocar, e ir ao estado 73


Estado 44

   57 FExpressaoAritmetica: T_NUM .

    $padrão  reduzir usando a regra 57 (FExpressaoAritmetica)


Estado 45

   32 Retorno: T_RETURN ExpressaoAritmetica . T_PONTO_E_VIRGULA
   49 ExpressaoAritmetica: ExpressaoAritmetica . T_ADICAO TExpressaoAritmetica
   50                    | ExpressaoAritmetica . T_SUBTRACAO TExpressaoAritmetica

    T_ADICAO           deslocar, e ir ao estado 74
    T_SUBTRACAO        deslocar, e ir ao estado 75
    T_PONTO_E_VIRGULA  deslocar, e ir ao estado 76


Estado 46

   51 ExpressaoAritmetica: TExpressaoAritmetica .
   52 TExpressaoAritmetica: TExpressaoAritmetica . T_MULTIPLICACAO FExpressaoAritmetica
   53                     | TExpressaoAritmetica . T_DIVISAO FExpressaoAritmetica

    T_MULTIPLICACAO  deslocar, e ir ao estado 77
    T_DIVISAO        deslocar, e ir ao estado 78

    $padrão  reduzir usando a regra 51 (ExpressaoAritmetica)


Estado 47

   54 TExpressaoAritmetica: FExpressaoAritmetica .

    $padrão  reduzir usando a regra 54 (TExpressaoAritmetica)


Estado 48

   37 CmdAtrib: T_ID T_IGUAL . ExpressaoAritmetica T_PONTO_E_VIRGULA
   38         | T_ID T_IGUAL . T_LITERAL T_PONTO_E_VIRGULA

    T_SUBTRACAO        deslocar, e ir ao estado 40
    T_ABRE_PARENTESES  deslocar, e ir ao estado 41
    T_ID               deslocar, e ir ao estado 42
    T_LITERAL          deslocar, e ir ao estado 79
    T_NUM              deslocar, e ir ao estado 44

    ExpressaoAritmetica   ir ao estado 80
    TExpressaoAritmetica  ir ao estado 46
    FExpressaoAritmetica  ir ao estado 47


Estado 49

   43 ChamadaFuncao: T_ID T_ABRE_PARENTESES . ListaParametros T_FECHA_PARENTESES
   44              | T_ID T_ABRE_PARENTESES . T_FECHA_PARENTESES

    T_SUBTRACAO         deslocar, e ir ao estado 40
    T_ABRE_PARENTESES   deslocar, e ir ao estado 41
    T_FECHA_PARENTESES  deslocar, e ir ao estado 81
    T_ID                deslocar, e ir ao estado 42
    T_LITERAL           deslocar, e ir ao estado 82
    T_NUM               deslocar, e ir ao estado 44

    ListaParametros       ir ao estado 83
    ExpressaoAritmetica   ir ao estado 84
    TExpressaoAritmetica  ir ao estado 46
    FExpressaoAritmetica  ir ao estado 47


Estado 50

   15 Declaracoes: Declaracoes Declaracao .

    $padrão  reduzir usando a regra 15 (Declaracoes)


Estado 51

   13 BlocoPrincipal: T_ABRE_CHAVES Declaracoes ListaCmd . T_FECHA_CHAVES
   23 ListaCmd: ListaCmd . Comando

    T_FECHA_CHAVES  deslocar, e ir ao estado 85
    T_IF            deslocar, e ir ao estado 12
    T_WHILE         deslocar, e ir ao estado 13
    T_PRINT         deslocar, e ir ao estado 14
    T_READ          deslocar, e ir ao estado 15
    T_RETURN        deslocar, e ir ao estado 16
    T_ID            deslocar, e ir ao estado 17

    Comando        ir ao estado 55
    Retorno        ir ao estado 23
    CmdSe          ir ao estado 24
    CmdEnquanto    ir ao estado 25
    CmdAtrib       ir ao estado 26
    CmdEscrita     ir ao estado 27
    CmdLeitura     ir ao estado 28
    ChamadaProc    ir ao estado 29
    ChamadaFuncao  ir ao estado 30


Estado 52

   21 ListaId: T_ID .

    $padrão  reduzir usando a regra 21 (ListaId)


Estado 53

   17 Declaracao: Tipo ListaId . T_PONTO_E_VIRGULA
   20 ListaId: ListaId . T_VIRGULA T_ID

    T_VIRGULA          deslocar, e ir ao estado 86
    T_PONTO_E_VIRGULA  deslocar, e ir ao estado 87


Estado 54

   14 BlocoPrincipal: T_ABRE_CHAVES ListaCmd T_FECHA_CHAVES .

    $padrão  reduzir usando a regra 14 (BlocoPrincipal)


Estado 55

   23 ListaCmd: ListaCmd Comando .

    $padrão  reduzir usando a regra 23 (ListaCmd)


Estado 56

   42 ChamadaProc: ChamadaFuncao T_PONTO_E_VIRGULA .

    $padrão  reduzir usando a regra 42 (ChamadaProc)


Estado 57

    1 Programa: ListaFuncoes BlocoPrincipal T_FIM .

    $padrão  reduzir usando a regra 1 (Programa)


Estado 58

    5 Funcao: TipoRetorno T_ID T_ABRE_PARENTESES . DeclParametros T_FECHA_PARENTESES BlocoPrincipal
    6       | TipoRetorno T_ID T_ABRE_PARENTESES . T_FECHA_PARENTESES BlocoPrincipal

    T_FECHA_PARENTESES  deslocar, e ir ao estado 88
    T_INT               deslocar, e ir ao estado 10
    T_STRING            deslocar, e ir ao estado 11

    DeclParametros  ir ao estado 89
    Parametro       ir ao estado 90
    Tipo            ir ao estado 91


Estado 59

   55 FExpressaoAritmetica: T_ABRE_PARENTESES . ExpressaoAritmetica T_FECHA_PARENTESES
   63 FExpressaoLogica: T_ABRE_PARENTESES . FExpressaoLogica T_FECHA_PARENTESES

    T_SUBTRACAO        deslocar, e ir ao estado 40
    T_ABRE_PARENTESES  deslocar, e ir ao estado 59
    T_ID               deslocar, e ir ao estado 42
    T_NUM              deslocar, e ir ao estado 44
    T_NOT              deslocar, e ir ao estado 60
    T_TRUE             deslocar, e ir ao estado 61
    T_FALSE            deslocar, e ir ao estado 62

    ExpressaoAritmetica   ir ao estado 92
    TExpressaoAritmetica  ir ao estado 46
    FExpressaoAritmetica  ir ao estado 47
    FExpressaoLogica      ir ao estado 93
    ExpressaoRelacional   ir ao estado 66


Estado 60

   62 FExpressaoLogica: T_NOT . FExpressaoLogica

    T_SUBTRACAO        deslocar, e ir ao estado 40
    T_ABRE_PARENTESES  deslocar, e ir ao estado 59
    T_ID               deslocar, e ir ao estado 42
    T_NUM              deslocar, e ir ao estado 44
    T_NOT              deslocar, e ir ao estado 60
    T_TRUE             deslocar, e ir ao estado 61
    T_FALSE            deslocar, e ir ao estado 62

    ExpressaoAritmetica   ir ao estado 63
    TExpressaoAritmetica  ir ao estado 46
    FExpressaoAritmetica  ir ao estado 47
    FExpressaoLogica      ir ao estado 94
    ExpressaoRelacional   ir ao estado 66


Estado 61

   64 FExpressaoLogica: T_TRUE .

    $padrão  reduzir usando a regra 64 (FExpressaoLogica)


Estado 62

   65 FExpressaoLogica: T_FALSE .

    $padrão  reduzir usando a regra 65 (FExpressaoLogica)


Estado 63

   49 ExpressaoAritmetica: ExpressaoAritmetica . T_ADICAO TExpressaoAritmetica
   50                    | ExpressaoAritmetica . T_SUBTRACAO TExpressaoAritmetica
   67 ExpressaoRelacional: ExpressaoAritmetica . T_MAIOR ExpressaoAritmetica
   68                    | ExpressaoAritmetica . T_MENOR ExpressaoAritmetica
   69                    | ExpressaoAritmetica . T_MAIOR_IGUAL ExpressaoAritmetica
   70                    | ExpressaoAritmetica . T_MENOR_IGUAL ExpressaoAritmetica
   71                    | ExpressaoAritmetica . T_IGUAL_IGUAL ExpressaoAritmetica
   72                    | ExpressaoAritmetica . T_DIFERENTE ExpressaoAritmetica

    T_ADICAO       deslocar, e ir ao estado 74
    T_SUBTRACAO    deslocar, e ir ao estado 75
    T_MAIOR_IGUAL  deslocar, e ir ao estado 95
    T_MENOR_IGUAL  deslocar, e ir ao estado 96
    T_DIFERENTE    deslocar, e ir ao estado 97
    T_IGUAL_IGUAL  deslocar, e ir ao estado 98
    T_MAIOR        deslocar, e ir ao estado 99
    T_MENOR        deslocar, e ir ao estado 100


Estado 64

   34 CmdSe: T_IF T_ABRE_PARENTESES ExpressaoLogica . T_FECHA_PARENTESES Bloco
   35      | T_IF T_ABRE_PARENTESES ExpressaoLogica . T_FECHA_PARENTESES Bloco T_ELSE Bloco
   59 ExpressaoLogica: ExpressaoLogica . T_AND FExpressaoLogica
   60                | ExpressaoLogica . T_OR FExpressaoLogica

    T_FECHA_PARENTESES  deslocar, e ir ao estado 101
    T_AND               deslocar, e ir ao estado 102
    T_OR                deslocar, e ir ao estado 103


Estado 65

   61 ExpressaoLogica: FExpressaoLogica .

    $padrão  reduzir usando a regra 61 (ExpressaoLogica)


Estado 66

   66 FExpressaoLogica: ExpressaoRelacional .

    $padrão  reduzir usando a regra 66 (FExpressaoLogica)


Estado 67

   36 CmdEnquanto: T_WHILE T_ABRE_PARENTESES ExpressaoLogica . T_FECHA_PARENTESES Bloco
   59 ExpressaoLogica: ExpressaoLogica . T_AND FExpressaoLogica
   60                | ExpressaoLogica . T_OR FExpressaoLogica

    T_FECHA_PARENTESES  deslocar, e ir ao estado 104
    T_AND               deslocar, e ir ao estado 102
    T_OR                deslocar, e ir ao estado 103


Estado 68

   40 CmdEscrita: T_PRINT T_ABRE_PARENTESES T_LITERAL . T_FECHA_PARENTESES T_PONTO_E_VIRGULA

    T_FECHA_PARENTESES  deslocar, e ir ao estado 105


Estado 69

   39 CmdEscrita: T_PRINT T_ABRE_PARENTESES ExpressaoAritmetica . T_FECHA_PARENTESES T_PONTO_E_VIRGULA
   49 ExpressaoAritmetica: ExpressaoAritmetica . T_ADICAO TExpressaoAritmetica
   50                    | ExpressaoAritmetica . T_SUBTRACAO TExpressaoAritmetica

    T_ADICAO            deslocar, e ir ao estado 74
    T_SUBTRACAO         deslocar, e ir ao estado 75
    T_FECHA_PARENTESES  deslocar, e ir ao estado 106


Estado 70

   41 CmdLeitura: T_READ T_ABRE_PARENTESES T_ID . T_FECHA_PARENTESES T_PONTO_E_VIRGULA

    T_FECHA_PARENTESES  deslocar, e ir ao estado 107


Estado 71

   56 FExpressaoAritmetica: T_SUBTRACAO FExpressaoAritmetica .

    $padrão  reduzir usando a regra 56 (FExpressaoAritmetica)


Estado 72

   49 ExpressaoAritmetica: ExpressaoAritmetica . T_ADICAO TExpressaoAritmetica
   50                    | ExpressaoAritmetica . T_SUBTRACAO TExpressaoAritmetica
   55 FExpressaoAritmetica: T_ABRE_PARENTESES ExpressaoAritmetica . T_FECHA_PARENTESES

    T_ADICAO            deslocar, e ir ao estado 74
    T_SUBTRACAO         deslocar, e ir ao estado 75
    T_FECHA_PARENTESES  deslocar, e ir ao estado 108


Estado 73

   33 Retorno: T_RETURN T_LITERAL T_PONTO_E_VIRGULA .

    $padrão  reduzir usando a regra 33 (Retorno)
